# Siemens-MRI-Video-Analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.mcp/: architecture_overview.md  developer-style.md  editing-rules.md  project-rules.md
docs/: guide.md
result/: output.json  output_cleaned.json
src/smva/: __init__.py  analyze.py  cli.py  extract.py  plot.py  setup_roi.py  test_ocr.py
src/smva/utils/: __init__.py  ocr.py  roi.py  video.py
